# pegasus-dev-assistant

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  validacion-rag-local.md
api-agente/: .env.example  .gitignore  README.md  pyproject.toml
api-agente/agent_api/: __init__.py  main.py  models.py  sessions.py
api-agente/tests/: test_api.py
doc/: INSTRUCCIONES-PASO-A-PASO.md
doc/conocimiento/: README.md  faq.md
doc/conocimiento/arquitectura/: arquitectura-microservicios-mapa-dominios.md
doc/conocimiento/ingenieria-frontend/: guia-ingenieria-frontend.md
doc/conocimiento/onboarding/: manual-onboarding-desarrolladores.md
doc/conocimiento/sre/: protocolo-incidentes-postmortems.md
doc/metadatos/: agente.md  contexto-negocio.md
frontend-agente/: README.md  angular.json  package-lock.json  package.json
frontend-agente/src/: index.html  styles.css
frontend-agente/src/app/: app.html  app.ts
frontend-agente/src/app/chat/: chat.models.ts  chat.service.ts
frontend-agente/src/app/chat/chat-header/: chat-header.html  chat-header.ts
frontend-agente/src/app/chat/chat-input/: chat-input.html  chat-input.ts
frontend-agente/src/app/chat/chat-messages/: chat-messages.html  chat-messages.ts
rag/: README.md  __init__.py  chat.py  chunking.py  config.py  console.py  evaluate.py  ingest.py  prompt-sistema.md  prompts.py  retrieve.py
tests/: conftest.py  test_agent_integration.py  test_agent_interaction.py  test_chunking.py  test_config.py  test_console.py  test_evaluation.py  test_ingest.py  test_prompts.py  test_retrieve.py
