[project]
name = "pegasus-rag"
version = "0.1.0"
description = "RAG local para Pegasus Dev Assistant (Challenge Alura)"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50",
    "chromadb>=0.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m \"not integration\""
markers = [
    "integration: prueba real contra OpenAI e índice local (requiere .env e ingest)",
]
