[project]
name = "pegasus-agent-api"
version = "0.1.0"
description = "API HTTP para Pegasus Dev Assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8,<9",
]

[tool.setuptools]
packages = ["agent_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
